--- a/contents/styles/_github-ribbon.scss
+++ b/contents/styles/_github-ribbon.scss
@@ -16,7 +16,7 @@
 
   /* Set the base colour */
   //background-color: #a00;
-  background-color: hsl(290, 65%, 50%);  /* #b72dd2; */
+  background-color: $magenta;  /* #b72dd2; */
 
   /* Set a gradient: transparent black at the top to almost-transparent black at the bottom */
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.15)));
