testing title change

--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -15,7 +15,7 @@ html(lang='en')
       header.pure-u-1
         h1 SlugCam
         .logo
-        p Solar Powered Wireless Tracking Cameras
+        p Solar Powered Wireless Smart Cameras
       nav.pure-u-1
         .nav-wrapper
           ul
