--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -35,3 +35,10 @@ html(lang='en')
           | Color Scheme is 
           a(href='http://atelierbram.github.io/syntax-highlighting/atelier-schemes/lakeside')
             | Atelier Lakeside
+          br
+          |Website Designed with 
+          a(href='http://wintersmith.io/')
+            | Wintersmith      
+          br
+          br
+          a(href='http://inrg.cse.ucsc.edu/inrgwiki').inrglogo_small
