added photos and favicon, also a new news post

--- a/contents/styles/styles.scss
+++ b/contents/styles/styles.scss
@@ -182,6 +182,10 @@ footer {
   height: 100px;
 }
 
+.caio{
+  width: 120px;
+}
+
 #ComputerCover
 {
   background-image: url('/images/Computer-2014.jpg');
@@ -191,3 +195,4 @@ footer {
   height:160px;
   width:130px;
 }
+
