--- a/contents/styles/styles.scss
+++ b/contents/styles/styles.scss
@@ -1,6 +1,7 @@
 // Google Fonts
 @import url(http://fonts.googleapis.com/css?family=Kreon:400,700|Open+Sans);
-
+@import url(http://fonts.googleapis.com/css?family=Vollkorn:400,700|Open+Sans);
+@import url(http://fonts.googleapis.com/css?family=Arvo:400,700|Open+Sans);
 
 @import 'colors';
 @import 'github-ribbon';
@@ -140,11 +141,11 @@ footer {
 
   .title {
     font-weight: bold;
-    font-family: 'Kreon', serif;
+    font-family: 'Vollkorn', serif;
   }
   date {
     font-style: italic;
-    color: $base03;
+    color: #fbaa10;
     font-size: .85em;
   }
   &:first-child {
@@ -158,6 +159,7 @@ footer {
   margin-left: 2em;
   p {
     margin-top: 0;
+    font-family: 'Arvo', serif;
   }
 
 }
