--- a/contents/styles/_imageStyles.scss
+++ b/contents/styles/_imageStyles.scss
@@ -81,6 +81,28 @@
   height: 250px;
 }
 
+#nodeV2
+{
+  background-image: url('/images/nodeV2.png');
+  background-position: 50% 50%;
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  border: 1px solid #FFF;
+  width: 500px;
+  height: 350px;
+}
+
+#nodesTransfer
+{
+  background-image: url('/images/nodesTransfer.jpg');
+  background-position: 50% 50%;
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  border: 1px solid #FFF;
+  width: 400px;
+  height: 600px;
+}
+
 #caio
 {
   background-image: url('/images/Caio.jpg');
@@ -91,3 +113,19 @@
   width: 160px;
   height: 115px;
 }
+#Guilherme {
+  background-image: url("/images/Guilherme.jpg");
+  background-position: 50% 50%;
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  border: 1px solid #000;
+  width: 115px;
+  height: 160px; }
+#John {
+  background-image: url("/images/John.jpg");
+  background-position: 50% 50%;
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  border: 1px solid #000;
+  width: 160px;
+  height: 100px;}
